--- a/Projects/xxdCmdb/web/templates/docker_index.html
+++ b/Projects/xxdCmdb/web/templates/docker_index.html
@@ -63,7 +63,7 @@
             <i class="fa fa-mixcloud" aria-hidden="true"></i>
             <span>Docker</span>
         </a>
-        <a id="menu_user_profile" class="menu-item" href="#">
+        <a id="menu_server" class="menu-item" href="/server_install.html">
             <i class="fa fa-server" aria-hidden="true"></i>
             <span>物理机</span>
         </a>
