--- a/Projects/xxdCmdb/web/templates/layout/_laytask.html
+++ b/Projects/xxdCmdb/web/templates/layout/_laytask.html
@@ -27,7 +27,7 @@
             <i class="fa fa-mixcloud" aria-hidden="true"></i>
             <span>Docker</span>
         </a>
-        <a id="menu_user_profile" class="menu-item" href="/physical_server.html">
+        <a id="menu_server" class="menu-item" href="/server_install.html">
             <i class="fa fa-server" aria-hidden="true"></i>
             <span>物理机</span>
         </a>
