--- a/Projects/xxdCmdb/web/templates/server_install.html
+++ b/Projects/xxdCmdb/web/templates/server_install.html
@@ -186,22 +186,37 @@
         function ChangePage(id) {
                 $.nbDataLists(id);
             }
+
+        // 回调函数内部使用setTimeout 防止可能阻塞代码
+        function get_log(id, timeout) {
+            // 暴力清除所有定时器
+            for(var i = 1; i < 2000; i++) {
+                clearTimeout(i);
+            }
+            var s = 'get_log(' + id + ')';
+            if(timeout=='1') return;
+            do_log(id);
+            do_ajax();
+            window.setTimeout(s, 3000);
+        }
             
         function add_style() {
             $('#table_body').children().each(function () {
-                var v = $(this).children().next().eq(12).html();
-                var i = $(this).children().next().eq(12).attr('id');
+                var v = $(this).children().next().eq(13).html();
+                var i = $(this).children().next().eq(13).attr('id');
                 if(v=='待安装'){
-                    $(this).children().next().eq(12).html("<img src='/static/imgs/check_3.png' style='height:20px; width:20px; margin-top: -5px'> 待安装")
+                    $(this).children().next().eq(13).html("<img src='/static/imgs/check_3.png' style='height:20px; width:20px; margin-top: -5px'> 待安装")
                 }else if(v=='已安装'){
-                    $(this).children().next().eq(12).html("<img src='/static/imgs/check_1.png' style='height:20px; width:20px; margin-top: -5px'> 已安装")
+                    $(this).children().next().eq(13).html("<img src='/static/imgs/check_1.png' style='height:20px; width:20px; margin-top: -5px'> 已安装")
                 }else if(v=='安装中'){
-                    $(this).children().next().eq(12).html("<img src='/static/imgs/avatar/reload.gif' style='height:20px; width:20px; margin-top: -5px'> 安装中")
+                    $(this).children().next().eq(13).html("<img src='/static/imgs/avatar/reload.gif' style='height:20px; width:20px; margin-top: -5px'> 安装中")
+                }else if(v=='已失败'){
+                    $(this).children().next().eq(13).html("<img src='/static/imgs/check_4.png' style='height:20px; width:20px; margin-top: -5px'> 已失败")
                 }
             })
         }
 
-        function do_release(eth, id) {
+        function do_install(ths, id) {
             $.ajax({
                 url: '/server_installs.html',
                 type: 'POST',
@@ -209,7 +224,123 @@
                 dataType: 'JSON',
                 success: function (response) {
                     if(response.status){
-                        alert('...')
+                        $(ths).parent().prev().html('安装中');
+                        $(ths).parent().prev().attr('style', 'color: green');
+                        $(ths).parent().prev().append("<img src='/static/imgs/avatar/reload.gif'>");
+                        // 刷新日志
+                        get_log(id, false);
+                    }else {
+                        alert(response.message)
+                    }
+                }
+            })
+        }
+
+        // 查询日志函数
+        function do_log(id) {
+            $('#release_div').attr('style', '');
+            $.ajax({
+                    url: '/server_installs.html',
+                    type: 'POST',
+                    data: {'install_log_id': id},
+                    dataType: 'JSON',
+                    success: function (response) {
+                        if (response.status){
+                            $('#release_log').empty();
+                            $.each(response.data['data_list'], function (k,v) {
+                                var reg = /^http*/;
+                                if(reg.test(v['msg'])==false){
+                                    var ft_time = fmTime(v['time']);
+                                    var s = '<p style="display: inline-block">' + '[ ' + ft_time + ' ]' + '&nbsp&nbsp' + '</p>' + '<a style="text-decoration: none">' + v['msg'] +'</a><br>';}
+                                else{
+                                    var s = '<p style="display: inline-block">' + '[ ' + ft_time + ' ]' + '&nbsp&nbsp' + '</p>' + '<a style="text-decoration: none" href="' + v['msg'] + '" target="_blank">' + v['msg'] +'</a><br>';
+                                }
+                                $('#release_log').append(s);
+                            })
+                        } else {
+                            $('#release_log').html('<a>未查询到日志</a>');
+                        }
+                    }
+            })
+        }
+
+        function dateFtt(fmt,date)
+            { //author: meizz
+              var o = {
+                "M+" : date.getMonth()+1,                 //月份
+                "d+" : date.getDate(),                    //日
+                "h+" : date.getHours(),                   //小时
+                "m+" : date.getMinutes(),                 //分
+                "s+" : date.getSeconds(),                 //秒
+                "q+" : Math.floor((date.getMonth()+3)/3), //季度
+                "S"  : date.getMilliseconds()             //毫秒
+              };
+              if(/(y+)/.test(fmt))
+                fmt=fmt.replace(RegExp.$1, (date.getFullYear()+"").substr(4 - RegExp.$1.length));
+              for(var k in o)
+                if(new RegExp("("+ k +")").test(fmt))
+              fmt = fmt.replace(RegExp.$1, (RegExp.$1.length==1) ? (o[k]) : (("00"+ o[k]).substr((""+ o[k]).length)));
+              return fmt;
+            }
+
+        function fmTime(value,row,index){
+            var crtTime = new Date(value);
+            return top.dateFtt("yyyy-MM-dd hh:mm:ss",crtTime);
+        }
+
+        function do_ajax() {
+            var i = 0;
+            var list_v = [];
+            var reg = /安装中/g;
+
+            $('#table_body').children().each(function () {
+                i = i + 1;
+                var obj_id = $(this).children().next().next().html();
+                var obj_status = $(this).children().next().eq(13).html();
+{#                var new_s = '发布中<img src=' + '/static/imgs/avatar/reload.gif>';#}
+                if(reg.test(obj_status)==true){
+                    list_v.push(obj_id)
+                }
+            });
+
+            $.ajax({
+                url: '/server_installs.html',
+                type: 'POST',
+                data: {'install_task_id': list_v},
+                dataType: 'JSON',
+                traditional: true,
+                success: function (response) {
+                    if (response.status){
+                        var ii=0;
+                        $('#table_body').children().each(function () {
+                            ii = ii + 1;
+                            var i = ii.toString();
+                            var str_id = 'status' + i;
+                            var jquery_id = '#status' + i;
+                            var v = $(this).children().next().eq(13).html();
+                            var obj_id = $(this).children().next().next().html();
+                            var s = 'do_release(this,' + obj_id + ')';
+                            if(reg.test(v)==true){
+                                $(this).children().next().eq(13).attr('id', str_id);
+{#                                $(this).children().next().next().next().next().next().next().next().next().next().next().attr('id', '');#}
+                                   for(i in response.data.data_list){
+                                    if(obj_id==response.data.data_list[i]['id']){
+                                        if(response.data.data_list[i]['status']=='1'){
+                                        $(jquery_id).text('安装中 ');
+                                        $(jquery_id).attr('style', 'color: green');
+                                        $(jquery_id).next().children(' :first-child').next().attr('onclick', '');
+                                        $(jquery_id).append("<img src='/static/imgs/avatar/reload.gif'>");
+                                    }else if(response.data.data_list[i]['status']=='4'){
+                                        $(jquery_id).text('安装失败');
+                                        $(jquery_id).attr('style', 'color: red');
+                                        $(jquery_id).next().children(' :first-child').next().attr('onclick', s);
+                                    }
+                                }
+                                }
+                            }
+                        });
+                    } else {
+                        alert(response.message);
                     }
                 }
             })
