--- a/Projects/spider/spider_ecust/templates/base.html
+++ b/Projects/spider/spider_ecust/templates/base.html
@@ -291,7 +291,7 @@ Cameo<b>ADMIN</b>
                 <nav class="main-navigation">
                     <ul>
                         <li class="active">
-                            <a href="index">
+                            <a href="/index">
                                 <i class="fa fa-drupal"></i>
                                 <span>远程课程</span>
                             </a>
