--- a/Projects/spider/spider_ecust/templates/index.html
+++ b/Projects/spider/spider_ecust/templates/index.html
@@ -16,7 +16,8 @@
                     </div>
                     <div class="row">
                         {% for item in data %}
-                        <div class="col-md-3 col-sm-6 col-xs-12" style="cursor: pointer;" onclick="post_course_id('{{ item.url }}')">
+{#                        <div class="col-md-3 col-sm-6 col-xs-12" style="cursor: pointer;" onclick="post_course_id('{{ item.url }}')">#}
+                        <div class="col-md-3 col-sm-6 col-xs-12" style="cursor: pointer;"><a href="course_detail/{{ item.url }}">
                             <section class="panel">
                                 <div class="panel-body">
                                     <div class="circle-icon bg-success">
@@ -27,6 +28,7 @@
                                     </div>
                                 </div>
                             </section>
+                            </a>
                         </div>
                         {% endfor %}
                     </div>
@@ -39,7 +41,18 @@
     <script>
         function post_course_id(id) {
             console.log(id);
-            $.post('index', {'course_id': id, csrfmiddlewaretoken: '{{ csrf_token  }}'})
+{#            $.post('index', {'course_id': id, csrfmiddlewaretoken: '{{ csrf_token  }}'})#}
+            $.ajax({
+                url: 'index',
+                type: 'POST',
+                data: {'course_id': id, csrfmiddlewaretoken: '{{ csrf_token  }}'},
+                dataType: 'JSON',
+                success: function (data) {
+                    if(data){
+                        window.location.href="www.baidu.com"
+                    }
+                }
+            })
         }
     </script>
 {% endblock %}
